--- a/Game_Refactored/game.html
+++ b/Game_Refactored/game.html
@@ -2,11 +2,12 @@
 <body>
 <canvas id="canvas" style= "border-style: solid">
 </canvas>
-<!-- <img src="assets/orb-food-black.png" id="foodImage" ></img> -->
-
 
 <script src="game.js">
 </script>
+<script src="drawGame.js">
+</script>
+
 </body>
 
 </html>
