--- a/GameLivesHighScores/game.html
+++ b/GameLivesHighScores/game.html
@@ -2,7 +2,9 @@
 <body>
 <canvas id="canvas" style= "border-style: solid">
 </canvas>
+<div id="highScores">
 
+</div>
 
 <script src="game.js">
 </script>
